--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,60 +2,70 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "25944429-8890-4e99-9569-548792653da4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[2, 2],\n",
-       "       [0, 0],\n",
-       "       [0, 0],\n",
-       "       [0, 0],\n",
-       "       [0, 0],\n",
+       "array([[1, 1],\n",
        "       [0, 0],\n",
        "       [2, 2],\n",
        "       [2, 2],\n",
        "       [1, 1],\n",
-       "       [0, 0]])"
+       "       [0, 0],\n",
+       "       [2, 2],\n",
+       "       [2, 2],\n",
+       "       [1, 1],\n",
+       "       [1, 1]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import numpy as np\n",
-    "states = np.array([[0,0],[1,1],[2,2]])\n",
+    "states = np.array([[0,0],[1,1],[2,2]\n",
     "l = len(states)\n",
     "states[np.random.randint(l,size=10)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "id": "0ab25867-b249-41e3-98d7-08e202b9c161",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4 8 3]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "array([[0.18255896, 0.16181001, 0.18767189, 0.02136741, 0.00311111,\n",
-       "        0.04488942, 0.14564476, 0.12241515, 0.1305313 ],\n",
-       "       [0.05841161, 0.07864058, 0.03233353, 0.08661483, 0.16043178,\n",
-       "        0.1202069 , 0.11125854, 0.18253313, 0.1695691 ]])"
+       "array([[0., 0., 0., 0., 1., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 1.],\n",
+       "       [0., 0., 0., 1., 0., 0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "e = np.random.rand(2,9)\n",
-    "e/e.sum(axis=1)[:,None]"
+    "b = 3\n",
+    "P = np.zeros([b,9])\n",
+    "r = np.random.randint(9,size=3)\n",
+    "print(r)\n",
+    "P[np.arange(b),r] = 1\n",
+    "P"
    ]
   },
   {
