--- a/DDPG/DDPG_notebook.ipynb
+++ b/DDPG/DDPG_notebook.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "6cf5c65c-a347-4d41-81c2-dc2d13ec534e",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -118,14 +123,6 @@
    "source": [
     "engine.display_run((0,0,0,0),epsilon=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "595f90e4-23a9-445b-b634-2fbbdf3d67b5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
